# neuroagent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUTHORS.txt  CHANGELOG.md  Dockerfile  README.md  alembic.ini  pyproject.toml  release-please-config.json  tool_call_evaluation.csv
.github/workflows/: changelog.yml  ci.yaml  docker.yml  docs_buildings.yaml  ecr.yml  release.yml
alembic/: env.py
alembic/versions/: 169bed537507_add_entity_to_message.py  b57e558cf11f_initial_migration.py  cf9eedbf9270_added_tool_call_table.py
src/neuroagent/: __init__.py  agent_routine.py  bluenaas_models.py  cell_types.py  new_types.py  resolving.py  stream.py  utils.py
swarm_copy/: README.md  __init__.py  agent_routine.py  cell_types.py  new_types.py  requirements.txt  run.py  schemas.py  stream.py  tools.py  util.py  utils.py
swarm_copy/app/: app_utils.py  config.py  dependencies.py  main.py
swarm_copy/tools/: __init__.py  base_tool.py  bluenaas_memodel_getall.py  bluenaas_memodel_getone.py  bluenaas_scs_getall.py  bluenaas_scs_getone.py  bluenaas_scs_post.py  bluenaas_tool.py  electrophys_tool.py  get_me_model_tool.py  get_morpho_tool.py  kg_morpho_features_tool.py  literature_search_tool.py  morphology_features_tool.py  now_tool.py  resolve_entities_tool.py  traces_tool.py
swarm_copy_tests/: conftest.py  test_agent_routine.py  test_cell_types.py  test_resolving.py  test_utils.py
swarm_copy_tests/app/: test_app_utils.py  test_config.py  test_dependencies.py  test_main.py
swarm_copy_tests/data/: KG_brain_regions_hierarchy_test.json  brainregion_hierarchy.json  kg_cell_types_hierarchy_test.json  kg_me_model_output.json  kg_morpho_features_response.json  knowledge_graph.json  morphology_id_metadata_response.json  tool_calls.json  trace_id_metadata.json
swarm_copy_tests/tools/: test_electrophys_tool.py  test_get_me_model_tool.py  test_get_morpho_tool.py  test_kg_morpho_features_tool.py  test_literature_search_tool.py  test_morphology_features_tool.py  test_resolve_entities_tool.py  test_traces_tool.py
tests/: __init__.py  conftest.py  mock_client.py  test_agent_routine.py  test_cell_types.py  test_dummy.py  test_resolving.py  test_utils.py
tests/agents/: test_simple_agent.py  test_simple_chat_agent.py  test_tool_calls.py
tests/app/: test_app_utils.py  test_config.py  test_dependencies.py  test_main.py  test_middleware.py  test_qa.py
tests/data/: get_traces.json  kg_cell_types_hierarchy_test.json  resolve_query.json  tool_calls.json
tests/multi_agents/: test_supervisor_multi_agent.py
tests/tools/: test_base_tool.py  test_basic_tool.py  test_bluenaas_tool.py  test_electrophys_tool.py  test_get_me_model_tool.py  test_get_morpho_tool.py  test_kg_morpho_features_tool.py  test_literature_search_tool.py  test_morphology_features_tool.py  test_resolve_br_tool.py  test_traces_tool.py  (+2 more)
(+74 files in other folders)
